--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev --ignore-watch node_modules ./src/server.ts --transpíleOnly"
+    "dev": "ts-node-dev --inspect --ignore-watch node_modules ./src/server.ts --transpíleOnly"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
